--- a/assets/sass/blocks/_catalog.sass
+++ b/assets/sass/blocks/_catalog.sass
@@ -2,7 +2,28 @@
     &__breadcrumbs
         display: flex
         align-items: center
-        gap: 8px
+        gap: 0px 8px
         margin: 33px 0px 30px
+        flex-wrap: wrap
         a 
             color: #D9DADA
+    &__td 
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+    &__items 
+        margin-top: 58px
+    &__item 
+        &-row 
+            display: grid
+            grid-template: auto / 145px 255px 370px 180px 1fr
+            align-items: center
+            gap: 50px
+            padding-bottom: 30px
+            margin-bottom: 20px
+            border-bottom: 1px solid #D9DADA
+            &:last-child, &.head
+                border: none
+                margin-bottom: 0 !important
+                
